# Selenium_BuyMe_project

./: BasePage.py  HomeScreen.py  PickBusiness.py  README.md  RegisterPage.py  SendGifts.py  config.json  conftest.py  homescreen.py  login.py  main.py  main2.py  pyproject.toml  sending_gifts.py  test_my_app.py
